--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -29,7 +29,7 @@
 	        <a class="nav-link" href="{% url 'about' %}">Nosotros</a>
 	      </li>
 	      <li>
-	        <a class="nav-link" href="{% url 'index' %}">Listados</a>
+	        <a class="nav-link" href="{% url 'listings' %}">Listados</a>
 	      </li>
 	    </ul>
 
