--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -28,7 +28,13 @@
 	      >
 	        <a class="nav-link" href="{% url 'about' %}">Nosotros</a>
 	      </li>
-	      <li>
+	      <li
+			{% if 'listings' in request.path %}
+				class="nav-item active mr-3"
+			{% else %}
+				class="nav-item mr-3"
+			{% endif %}
+	      >
 	        <a class="nav-link" href="{% url 'listings' %}">Listados</a>
 	      </li>
 	    </ul>
