--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -40,16 +40,18 @@
             commodi id libero eveniet harum perferendis laborum molestias quia.</p>
         </div>
         <div class="col-md-4">
-          <div class="card">
-            <img class="card-img-top" src="{% static '/img/workers/kyle.jpg' %}" alt="Herrero del mes">
-            <div class="card-body">
-              <h5 class="card-title">Herrero del mes</h5>
-              <h6 class="text-secondary">Kyle Brown</h6>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis nesciunt amet, illo itaque similique repellat.
-                content.
-              </p>
-            </div>
-          </div>
+          {% if mvp_workers %}
+            {% for worker in mvp_workers %}
+              <div class="card">
+                <img class="card-img-top" src="{{ worker.photo.url }}" alt="Herrero del mes">
+                <div class="card-body">
+                  <h5 class="card-title">Herrero del mes</h5>
+                  <h6 class="text-secondary">{{ worker.name }}</h6>
+                  <p class="card-text">{{ worker.descriptions}}</p>
+                </div>
+              </div>
+            {% endfor %}
+          {% endif %}
         </div>
       </div>
     </div>
@@ -68,39 +70,25 @@
     <div class="container">
       <h2 class="text-center">Our Team</h2>
       <div class="row text-center">
-        <div class="col-md-4">
-          <img src="{% static '/img/workers/kyle.jpg' %}" alt="" class="rounded-circle mb-3">
-          <h4>Kyle Brown</h4>
-          <p class="text-success">
-            <i class="fas fa-award text-success mb-3"></i> Herrero</p>
-          <hr>
-          <p>
-            <i class="fas fa-phone"></i> (555)-555-5555</p>
-          <p>
-            <i class="fas fa-envelope-open"></i> kyle@herreria.co</p>
-        </div>
-
-        <div class="col-md-4">
-          <img src="{% static '/img/workers/mark.jpg' %}" alt="" class="rounded-circle mb-3">
-          <h4>Mark Hudson</h4>
-          <p class="text-success">Herrero</p>
-          <hr>
-          <p>
-            <i class="fas fa-phone"></i> (444)-444-4444</p>
-          <p>
-            <i class="fas fa-envelope-open"></i> mark@herreria.co</p>
-        </div>
-
-        <div class="col-md-4">
-          <img src="{% static '/img/workers/jenny.jpg' %}" alt="" class="rounded-circle mb-3">
-          <h4>Jenny Johnson</h4>
-          <p class="text-success">Herrero</p>
-          <hr>
-          <p>
-            <i class="fas fa-phone"></i> (333)-333-3333</p>
-          <p>
-            <i class="fas fa-envelope-open"></i> jenny@herreria.co</p>
-        </div>
+        {% if workers %}
+          {% for worker in workers %}
+            <div class="col-md-4">
+              <img src="{{ worker.photo.url }}" alt="" class="rounded-circle mb-3">
+              <h4>{{ worker.name }}</h4>
+              <p class="text-success">
+                <i class="fas fa-award text-success mb-3"></i> Herrero</p>
+              <hr>
+              <p>
+                <i class="fas fa-phone"></i>{{ worker.phone }}</p>
+              <p>
+                <i class="fas fa-envelope-open"></i> {{ worker.email }}</p>
+            </div>
+          {% endfor %}
+        {% else %}
+          <div class="col-md-12">
+            <p>No se encuentran trabajadores</p>
+          </div>
+        {% endif %}
       </div>
     </div>
   </section>
