Add login, registar and authorizations. Now works with credentials.

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -55,6 +55,9 @@
     </div>
   </section>
 
+  <!-- Messages -->
+  {% include 'partials/_alerts.html' %}
+
   <!-- Listings -->
   <section id="listings" class="py-5">
     <div class="container">
