--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -39,18 +39,30 @@
 	      </li>
 	    </ul>
 
-	    <ul class="nav-item mr-3">
-	      <li class="nav-item mr-3">
-	        <a class="nav-link" href="register.html">
-	          <i class="fas fa-user-plus"></i> Registrarse</a>
-	      </li>
-	      <li class="nav-item mr-3">
-	        <a class="nav-link" href="login.html">
-	          <i class="fas fa-sign-in-alt"></i>
+	     <ul class="navbar-nav ml-auto">
+          <li
+			{% if 'register' in request.path %}
+				class="nav-item active mr-3"
+			{% else %}
+				class="nav-item mr-3"
+			{% endif %}
+          >
+            <a class="nav-link" href="{% url 'register' %}">
+              <i class="fas fa-user-plus"></i> Registrarse</a>
+          </li>
+          <li 
+			{% if 'login' in request.path %}
+				class="nav-item active mr-3"
+			{% else %}
+				class="nav-item mr-3"
+			{% endif %}
+          >
+            <a class="nav-link" href="{% url 'login' %}">
+              <i class="fas fa-sign-in-alt"></i>
 
-	          Sesion</a>
-	      </li>
-	    </ul>
+              Sesion</a>
+          </li>
+        </ul>
 	  </div>
 	</div>
 </nav>
