Addint dynamic title to base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="{% static 'css/style.css' %}">
 	<!-- Lightbox -->
 	<link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
-	<title>Herreria </title>
+	<title>Herreria {% block title %} {% endblock %}</title>
 </head>
 <body>
 	{# Top Bar #}
