--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -1,6 +1,7 @@
-{% extends 'base.html'%}
+{% extends 'base.html' %}
 {% load static %}
 {% load humanize %}
+{% block title %} | Listados {% endblock %}
 
 
 {% block content%}
